kubernetes/argocd/applications/media/apps/sabnzbd/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sabnzbd
  namespace: media
  labels:
    route.scope: internal
  annotations:
    gatus.home-operations.com/enabled: "true"
    gatus.home-operations.com/endpoint: |
      group: Media
      url: "https://sabnzbd.vaderrp.com/api?mode=version"
      dns: ""
      conditions:
        - "[STATUS] == 200"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/name: SABnzbd
    gethomepage.dev/icon: sabnzbd.png
    gethomepage.dev/href: https://sabnzbd.vaderrp.com
    gethomepage.dev/pod-selector: app.kubernetes.io/name=sabnzbd
    gethomepage.dev/widget.type: sabnzbd
    gethomepage.dev/widget.url: http://sabnzbd.media.svc.cluster.local
    gethomepage.dev/widget.key: 592ec7e4f58546cc8fbd92b9258451cd
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-internal
      namespace: network
  hostnames:
    - sabnzbd.vaderrp.com
    - sab.vaderrp.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: authentik-forward
      backendRefs:
        - group: ""
          kind: Service
          name: sabnzbd
          port: 80
          weight: 1
